--- a/style.css
+++ b/style.css
@@ -5,20 +5,33 @@ body {
     flex-wrap: wrap;
 }
 
+.main {
+    height: 94vh;
+    overflow: scroll;
+}
+
+@media screen and (max-width: 900px) {
+    body {
+        flex-direction: column-reverse;
+    }
+}
+
 
 /*---------------------------------------------------------------------------HEADER--------------------------------------------------------------------------------------------------------------*/
 
 .headerBody {
     background-color: white;
     width: 100%;
-    height: 50px;
-    position: sticky;
-    top: 0;
-    left: 0;
+    height: 6vh;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     z-index: 1;
+}
+
+.iconMenu {
+    height: 20px;
+    display: none;
 }
 
 .sidebar {
@@ -35,25 +48,14 @@ body {
     color: black;
 }
 
-@media screen and (min-width: 420px) and (max-width: 490px) {
-    .elementheader {
-        font-size: 1.3em;
-    }
-    .headerBody {
-        display: flex;
-        justify-content: space-evenly;
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 420px) {
-    .elementheader {
-        font-size: 0.9em;
-    }
-    .headerBody {
-        display: flex;
+@media screen and (max-width: 900px) {
+    .sidebar {
+        width: 100%;
         justify-content: space-around;
     }
 }
+
+@media screen and (min-width: 320px) and (max-width: 420px) {}
 
 
 /*-----------------------------------------------------------------------------HOME--------------------------------------------------------------------------------------------------------------*/
