--- a/style.css
+++ b/style.css
@@ -470,6 +470,25 @@ body {
     font-family: 'Noto Sans Display', sans-serif;
 }
 
+@media screen and (max-width: 1185px){
+    .textecitation{
+        font-size:2.5em;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .textecitation{
+        font-size: 2em;
+        margin:10px;
+    }
+
+    .elementCitationDeux{
+        font-size: 1.3em;
+        margin:10px;
+    }
+}
+
 
 /*-----------------------------------------------------------------------EN SAVOIR PLUS------------------------------------------------------------------------------------------------*/
 
@@ -571,6 +590,110 @@ body {
     justify-content: center;
     align-items: flex-end;
     margin-top: 50px;
+}
+
+@media screen and (max-width: 1216px){
+    .elementEnSavoirPlus{
+        margin: 10px;
+    }
+
+    .titreEnSavoirPlus{
+        font-size:2em;
+        text-align: center;
+    }
+
+    .soustitreEnSavoirPlus{
+        font-size: 1.1em;
+        text-align: center;
+    }
+
+    .description{
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-top: 5px;
+    }
+
+    .descriptionDeux{
+        flex-direction: column;
+    }
+
+    .titreElementDescriptionDeux {
+        font-size: 1.6em;
+        text-align: center;
+    }
+
+    .texteElementDescriptionDeux {
+        font-size: 1em;
+        text-align: center;
+    }
+
+    .footerEnSavoirPlus{
+        font-size: 1.3em;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    .descriptionDeux{
+        margin-right: 9px;
+    }
+
+    .imageElementDescriptionDeux{
+        height: 350px;
+        width: 450px;
+    }
+    
+    .titreElementDescriptionDeux {
+        font-size: 1.2em;
+        text-align: center;
+    }
+
+    .texteElementDescriptionDeux {
+        font-size: 0.9em;
+        text-align: center;
+    }
+
+    .footerEnSavoirPlus{
+        font-size: 1em;
+        text-align: center;
+        margin-bottom: 15px;
+        margin-right: 10px;
+    }
+}
+
+@media screen and (max-width:400px){
+    .enSavoirPlus{
+        margin: 0px;
+    }
+
+    .elementEnSavoirPlus{
+        width: 100%;
+    }
+    .titreEnSavoirPlus{
+        font-size:1.5em;
+        text-align: center;
+    }
+
+    .soustitreEnSavoirPlus{
+        font-size: 0.9em;
+        text-align: center;
+    }
+
+    .descriptionEnSavoirPlus{
+        width: 100%;
+    }
+
+    .titreElementDescription {
+        font-size: 1.05em;
+        margin-right: 10px;
+    }
+
+    .texteElementDescription {
+        font-size: 1em;
+        width: 100%;
+    }
 }
 
 
